20250203_02:DBアクセスリンクを追加

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <h1 class="h1">Java + SpringBoot学習用アプリ</h1>
         <p>このアプリの構成要素は以下です。</p>
-        <div>
+        <a th:href="@{/h2-console}" class="btn btn-outline-info btn-sm" target=”_blank”>DBアクセス</a>
+        <div class="mt-3">
             <table class="table table-striped">
                 <thead>
                     <tr>
