--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,3 +1,11 @@
+<!--
+  このHTMLファイルは、Java + Spring Boot学習用アプリのトップページを表します。
+  Thymeleafテンプレートエンジンを使用しており、以下の構成要素を表示します：
+  - 開発言語、ビルドツール、フレームワーク、データベースなどの情報
+  - H2コンソールへのリンク
+  - Bootstrapを使用したスタイリング
+-->
+
 <!DOCTYPE html>
 <html lang="ja"
       xmlns:th="http://www.thymeleaf.org"
@@ -5,58 +13,64 @@
       layout:decorate="~{layout/layout}">
 <head>
     <title>トップページ</title>
- </head>
+</head>
 <body>
 <section layout:fragment="content">
     <div class="container">
+        <!-- アプリのタイトル -->
         <h1 class="h1">Java + SpringBoot学習用アプリ</h1>
         <p>このアプリの構成要素は以下です。</p>
+
+        <!-- H2コンソールへのリンク -->
         <a th:href="@{/h2-console}" class="btn btn-outline-info btn-sm" target=”_blank”>DBアクセス</a>
+
         <div class="mt-3">
+            <!-- アプリの構成要素を表すテーブル -->
             <table class="table table-striped">
                 <thead>
-                    <tr>
-                        <th>カテゴリ</th>
-                        <th>要素</th>
-                        <th>バージョン</th>
-                    </tr>
+                <tr>
+                    <th>カテゴリ</th>
+                    <th>要素</th>
+                    <th>バージョン</th>
+                </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>開発言語</td>
-                        <td>Java</td>
-                        <td>Amazon Corretto 17.0.13</td>
-                    </tr>
-                    <tr>
-                        <td>ビルドツール</td>
-                        <td>Gradle</td>
-                        <td>8.12</td>
-                    </tr>
-                    <tr>
-                        <td>フレームワーク</td>
-                        <td>SpringBoot</td>
-                        <td>3.1.2</td>
-                    </tr>
-                    <tr>
-                        <td>フレームワーク(DB)</td>
-                        <td>MyBatis</td>
-                        <td>3.0.2</td>
-                    </tr>
-                    <tr>
-                        <td>データベース</td>
-                        <td>H2 Database</td>
-                        <td>2.1.214</td>
-                    </tr>
-                    <tr>
-                        <td>テンプレートエンジン</td>
-                        <td>Thymeleaf</td>
-                        <td>3.1.2</td>
-                    </tr>
-                    <tr>
-                        <td>CSSフレームワーク</td>
-                        <td>Bootstrap</td>
-                        <td>5.2.3</td>
-                    </tr>
+                <!-- 各構成要素の情報 -->
+                <tr>
+                    <td>開発言語</td>
+                    <td>Java</td>
+                    <td>Amazon Corretto 17.0.13</td>
+                </tr>
+                <tr>
+                    <td>ビルドツール</td>
+                    <td>Gradle</td>
+                    <td>8.12</td>
+                </tr>
+                <tr>
+                    <td>フレームワーク</td>
+                    <td>SpringBoot</td>
+                    <td>3.1.2</td>
+                </tr>
+                <tr>
+                    <td>フレームワーク(DB)</td>
+                    <td>MyBatis</td>
+                    <td>3.0.2</td>
+                </tr>
+                <tr>
+                    <td>データベース</td>
+                    <td>H2 Database</td>
+                    <td>2.1.214</td>
+                </tr>
+                <tr>
+                    <td>テンプレートエンジン</td>
+                    <td>Thymeleaf</td>
+                    <td>3.1.2</td>
+                </tr>
+                <tr>
+                    <td>CSSフレームワーク</td>
+                    <td>Bootstrap</td>
+                    <td>5.2.3</td>
+                </tr>
                 </tbody>
             </table>
         </div>
