--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,37 +1,57 @@
+<!--
+  このHTMLファイルは、Thymeleafを使用したレイアウトテンプレートです。
+  主にTODOアプリの共通レイアウトを定義しています。
+
+  特徴:
+  - Bootstrapを使用したレスポンシブデザイン
+  - ナビゲーションバーを含む共通ヘッダー
+  - layout:fragmentを使用して動的にコンテンツを挿入可能
+-->
+
 <!DOCTYPE html>
 <html lang="ja"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+    <!-- ページの文字エンコーディングとレスポンシブ設定 -->
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- ページタイトルのパターンを定義 -->
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">TODOアプリ</title>
+    <!-- BootstrapのCSSを読み込み -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 </head>
 <body>
+<!-- BootstrapのJavaScriptを読み込み -->
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
 <div class="container">
+    <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
+            <!-- アプリのホームリンク -->
             <a class="navbar-brand" th:href="@{/}">TODO</a>
+            <!-- ナビゲーションのトグルボタン -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- ナビゲーションメニュー -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <!-- ホームページリンク -->
                         <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
+                        <!-- タスク一覧ページリンク -->
                         <a class="nav-link" th:href="@{/tasks}">タスク一覧</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- 動的コンテンツを挿入するセクション -->
     <section layout:fragment="content" class="mt-3"></section>
 </div>
-
 </body>
 </html>
