--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -42,6 +42,23 @@
                         <label class="btn btn-outline-primary" for="statusDone">DONE</label>
                     </div>
                 </div>
+                <div class="form-group mt-3">
+                    <div>
+                        <!-- 優先度検索フィールド -->
+                        <label class="form-label">優先度</label>
+                    </div>
+                    <div class="btn-group">
+                        <!-- 高のチェックボックス -->
+                        <input class="btn-check" type="checkbox" id="priorityHigh" name="priority" value="HIGH" th:checked="*{isCheckedpriority('HIGH')}">
+                        <label class="btn btn-outline-primary" for="priorityHigh">HIGH</label>
+                        <!-- 普のチェックボックス -->
+                        <input class="btn-check" type="checkbox" id="priorityNormal" name="priority" value="NORMAL" th:checked="*{isCheckedpriority('NORMAL')}">
+                        <label class="btn btn-outline-primary" for="priorityNormal">NORMAL</label>
+                        <!-- 低のチェックボックス -->
+                        <input class="btn-check" type="checkbox" id="priorityLow" name="priority" value="LOW" th:checked="*{isCheckedpriority('LOW')}">
+                        <label class="btn btn-outline-primary" for="priorityLow">LOW</label>
+                    </div>
+                </div>
                 <div class="mt-3">
                     <!-- 検索ボタン -->
                     <button type="submit" class="btn btn-primary">検索</button>
@@ -57,6 +74,7 @@
                 <th>ID</th>
                 <th>概要</th>
                 <th>ステータス</th>
+                <th>優先度</th>
             </tr>
             </thead>
             <tbody>
@@ -68,6 +86,8 @@
                 <td><a th:href="@{/tasks/{id}(id=*{id})}" th:text="*{summary}"></a></td>
                 <!-- タスクステータス -->
                 <td th:text="*{status}"></td>
+                <!-- 優先度 -->
+                <td th:text="*{priority}"></td>
             </tr>
             </tbody>
         </table>
