一括削除機能追加

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,6 +71,16 @@
                     <td>Bootstrap</td>
                     <td>5.2.3</td>
                 </tr>
+                <tr>
+                    <td>JavaScriptライブラリ</td>
+                    <td>jQuery</td>
+                    <td>3.7.1</td>
+                </tr>
+                <tr>
+                    <td>開発言語(FE)</td>
+                    <td>TypeScript</td>
+                    <td>5.8.3</td>
+                </tr>
                 </tbody>
             </table>
         </div>
