--- a/src/main/resources/templates/tasks/detail.html
+++ b/src/main/resources/templates/tasks/detail.html
@@ -36,7 +36,11 @@
         <!-- タスク情報: ID、概要、ステータス、説明を表示 -->
         <h2 th:text="'#' + *{id} + ' ' + *{summary}"></h2>
         <p th:text="*{status}"></p>
-        <pre th:text="*{description}"></pre>
+        <p th:switch="*{priority}">優先度：
+            <span th:case="'HIGH'" class="badge bg-danger">高</span>
+            <span th:case="'MEDIUM'" class="badge bg-warning">中</span>
+            <span th:case="'LOW'" class="badge bg-secondary">低</span>
+        <p th:text="*{description}"></p>
     </div>
 </section>
 </body>
