--- a/src/main/resources/templates/tasks/form.html
+++ b/src/main/resources/templates/tasks/form.html
@@ -48,8 +48,12 @@
             </div>
             <!-- 優先度表示フィールド -->
             <div class="form-group mt-3">
-                <label for="priority">優先度:</label>
-                <input type="number" id="priority" th:field="*{priority}" min="1" max="5" required class="form-control" th:errorclass="is-invalid">
+                <label for="priorityInput" class="form-label">優先度</label>
+                <select id="priorityInput" th:field="*{priority}" class="form-control" th:errorclass="is-invalid">
+                    <option value="高">高</option>
+                    <option value="中">中</option>
+                    <option value="低">低</option>
+                </select>
                 <span th:errors="*{priority}" class="invalid-feedback"></span>
             </div>
             <!-- ボタン: 作成/編集と戻る -->
