一括削除機能追加　実行ボタン表示on-off

--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -72,7 +72,7 @@
             <option value="0" selected>一括操作を選択</option>
             <option value="1">一括削除</option>
             <option value="2">一括更新</option>
-        </select><button class="btn btn-primary btn-sm" id="taskBatchActionButton">実行</button>
+        </select><button  class="btn btn-primary btn-sm" id="taskBatchActionButton" style="display:none;">実行</button>
     </div>
     <div>
         <!-- タスク一覧テーブル -->
