コメント追加

--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -47,11 +47,11 @@
                     </div>
                     <div class="btn-group">
                         <input class="btn-check" type="checkbox" id="priorityHigh" name="priority" value="高" th:checked="*{isPriorityChecked('高')}">
-                        <label class="btn btn-outline-danger" for="priorityHigh">高</label>
+                        <label class="btn btn-outline-primary" for="priorityHigh">高</label>
                         <input class="btn-check" type="checkbox" id="priorityMedium" name="priority" value="中" th:checked="*{isPriorityChecked('中')}">
-                        <label class="btn btn-outline-warning" for="priorityMedium">中</label>
+                        <label class="btn btn-outline-primary" for="priorityMedium">中</label>
                         <input class="btn-check" type="checkbox" id="priorityLow" name="priority" value="低" th:checked="*{isPriorityChecked('低')}">
-                        <label class="btn btn-outline-secondary" for="priorityLow">低</label>
+                        <label class="btn btn-outline-primary" for="priorityLow">低</label>
                     </div>
                 </div>
                 <div class="mt-3">
