--- a/src/main/resources/templates/tasks/detail.html
+++ b/src/main/resources/templates/tasks/detail.html
@@ -37,6 +37,7 @@
         <h2 th:text="'#' + *{id} + ' ' + *{summary}"></h2>
         <p th:text="*{status}"></p>
         <pre th:text="*{description}"></pre>
+        <p th:text="*{priority}"></p>
     </div>
 </section>
 </body>
