コメント追加

--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -62,7 +62,7 @@
         <div class="mb-2">
             <!-- 一括操作プルダウンと実行ボタン -->
             <select id="bulkActionSelect" class="form-select d-inline-block w-auto">
-                <option value="">一括操作</option>
+                <option value="">一括操作を選択</option>
                 <option value="delete">一括削除</option>
                 <!-- 今後ここに一括更新など追加可能 -->
             </select>
@@ -91,9 +91,10 @@
             </tr>
             </tbody>
         </table>
+        <script src="/js/task-list.js"></script>
     </div>
 </section>
-<script src="/js/task-list.js"></script>
+
 </body>
 </html>
 
