--- a/src/main/resources/templates/tasks/detail.html
+++ b/src/main/resources/templates/tasks/detail.html
@@ -21,10 +21,10 @@
 <section layout:fragment="content">
     <div class="mt-3">
         <!-- 編集ボタン: タスク編集ページへのリンク -->
-        <a th:href="@{/tasks/{id}/edit(id=${id})}" class="btn btn-primary">編集</a>
+        <a th:href="@{/tasks/{id}/edit(id=${task.id})}" class="btn btn-primary">編集</a>
         <!-- 削除フォーム: タスクを削除するためのフォーム -->
         <form
-                th:action="@{/tasks/{id}(id=${id})}"
+                th:action="@{/tasks/{id}(id=${task.id})}"
                 th:method="delete"
                 style="display: inline;"
                 onclick="return confirm('削除しますか？');"
@@ -42,3 +42,4 @@
 </section>
 </body>
 </html>
+
