--- a/src/main/resources/templates/tasks/list.html
+++ b/src/main/resources/templates/tasks/list.html
@@ -108,6 +108,8 @@
                     <span th:case="'NORMAL'" class="badge bg-warning">中</span>
                     <span th:case="'LOW'" class="badge bg-secondary">低</span>
                 </td>
+                <!-- 担当者名 -->
+                <td th:text="*{managerName}"></td>
             </tr>
             </tbody>
         </table>
