担当者の一覧画面、作成/編集画面、詳細画面、削除

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -46,6 +46,10 @@
                         <!-- タスク一覧ページリンク -->
                         <a class="nav-link" th:href="@{/tasks}">タスク一覧</a>
                     </li>
+                    <li class="nav-item">
+                        <!-- 担当者一覧ページリンク -->
+                        <a class="nav-link" th:href="@{/operators}">担当者一覧</a>
+                    </li>
                 </ul>
             </div>
         </div>
